# arcnet

./: .gitignore  .gitmodules  README.md
arcnet/: CMakeLists.txt  CMakePresets.json  toolchain-android.cmake
arcnet/discovery/: CMakeLists.txt  main.cpp
arcnet/discovery/include/arcnet/discovery/: emitter.hpp  interfaces.hpp
arcnet/discovery/include/arcnet/discovery/mdns/: mdns_emitter.hpp  service.hpp
arcnet/discovery/src/: interfaces.cpp
arcnet/discovery/src/mdns/: mdns_emitter.cpp  service.cpp
arcnet/lib/boost/: CMakeLists.txt
